my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ESYNTAX_arg_inits/T_ESYNTAX_arg_inits-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ESYNTAX_ARG_INITS_STRUCT_H
#define T_ESYNTAX_ARG_INITS_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ESYNTAX_arg_inits(void);


#endif /* not T_ESYNTAX_ARG_INITS_STRUCT_H */
